c/src/test/resources/c/nec_inline_bnc/invalid/ex3-10.ctrl
<controlFile>
  <sourceFile name="../ex3.c" id="1" />
  <run>
    <startPosition fileId="1" line="4" />
    <wayPoint fileId="1" line="13" >
      <loop iterTimes="10" />
    </wayPoint>
    <endPosition fileId="1" line="22" />
  </run>
</controlFile>